<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="MainActivity"
            type="com.rodriguez.basketballapp.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/local_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/score_local_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="14" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/baloncesto"
            app:layout_constraintBottom_toTopOf="@+id/score_guest_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_local_text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/guest_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/score_guest_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            tools:text="14" />

        <Button
            android:id="@+id/minus_local_btn"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/minus_1"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_size"
            app:layout_constraintBottom_toBottomOf="@+id/score_local_text"
            app:layout_constraintEnd_toStartOf="@+id/score_local_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/score_local_text"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btn_local_1"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/gray"
            android:text="@string/text_1"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/score_local_text"
            app:layout_constraintTop_toTopOf="@+id/score_local_text" />

        <Button
            android:id="@+id/btn_local_2"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/gray"
            android:text="@string/text_2"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_size"
            app:layout_constraintBottom_toBottomOf="@+id/score_local_text"
            app:layout_constraintEnd_toEndOf="@+id/btn_local_1"
            app:layout_constraintStart_toStartOf="@+id/btn_local_1" />

        <ImageButton
            android:id="@+id/reset_btn"
            android:layout_width="63dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/gray"
            android:src="@drawable/ic_baseline_restore_24"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/minus_local_btn"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageButton
            android:id="@+id/next_btn"
            android:layout_width="63dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/gray"
            android:src="@drawable/ic_baseline_navigate_next_24"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/btn_local_2"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <Button
            android:id="@+id/minus_guest_btn"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/minus_1"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_size"
            app:layout_constraintBottom_toBottomOf="@+id/score_guest_text"
            app:layout_constraintStart_toStartOf="@+id/reset_btn"
            app:layout_constraintTop_toTopOf="@+id/score_guest_text" />

        <Button
            android:id="@+id/btn_guest_1"
            android:layout_width="75dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/gray"
            android:text="@string/text_1"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_size"
            app:layout_constraintEnd_toEndOf="@+id/next_btn"
            app:layout_constraintTop_toTopOf="@+id/score_guest_text" />

        <Button
            android:id="@+id/btn_guest_2"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/gray"
            android:text="@string/text_2"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_size"
            app:layout_constraintBottom_toBottomOf="@+id/score_guest_text"
            app:layout_constraintEnd_toEndOf="@+id/btn_guest_1"
            app:layout_constraintStart_toStartOf="@+id/btn_guest_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>